--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
 
+
+# https://fal.ai/dashboard/keys
+FAL_KEY="58a4b7a3-c6be-49a1-8ca9-824744032ff2:b322b49a0c9bd2d735526718764a9ea1"
+
+# https://uploadthing.com required if you want to use file upload
+UPLOADTHING_TOKEN=""
+
+# https://upstash.com required if you want to the share button
+KV_URL=""
+KV_REST_API_READ_ONLY_TOKEN=""
+KV_REST_API_TOKEN=""
+KV_REST_API_URL=""
